objects/Daily_Flow_Trigger__c.object
<CustomObject>
    <fields>
        <fullName>Date_Time_Trigger__c</fullName>
        <label>Date Time Trigger</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flow_Name__c</fullName>
        <label>Flow Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JumpBall Credit Pull Flow</fullName>
                </value>
                <value>
                    <fullName>zzObjectFlow Flow</fullName>
                </value>
                <value>
                    <fullName>Dashboard Trigger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <label>sObject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Custom Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Daily Flow Trigger</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Daily Flow Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Flow Trigger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>